applied bootstrap components to pokemon items and stylized

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,64 +1,19 @@
-.pokemon-button {
+.btn {
+  text-align: center;
   height: 50px;
   width: 200px;
-  background: lightgrey;
-  border: none;
-  margin-bottom: 10px;
-  display: block;
+}
+
+.list-group {
+  width: 600px;
+  text-align: center;
+  margin-top: 10px;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 10px;
 }
 
-.pokemon-list {
-  list-style-type: none;
-}
-
-#modal-container {
-  display: none;
-}
-
-#modal-container.is-visible {
-  position: fixed;
-  padding: 20px;
-  box-sizing: border-box;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-
-  /* to show it above other content */
-  z-index: 999;
-
-  /* to allow scrolling if the screen is not high enough*/
-  overflow: auto;
-
-  /* this is used to center the modal */
-  display: grid;
-  text-align: center;
-}
-
-.modal {
-  margin: auto;
-  display: inline-block;
-  box-sizing: border-box;
-  background: #fff;
-  padding: 15px;
-  width: 100%;
-  max-width: 300px;
-  text-align: left;
-}
-
-.modal-close {
-  float: right;
-  -webkit-appearance: none;
-  border: 0;
-  background: none;
-  color: #777;
-  text-decoration: underline;
-}
-
-img {
+.modal-img {
   display: block;
   margin-left: auto;
   margin-right: auto;
